@@ -2,11 +2,7 @@ DIFF support file format.
 
 This file contains changes to the main NSD-DATABASE file.
 
-Diff file:
-- Magic "NSDdfV01"
-- CRC32 of base database.
-
-Parts, each part has
+Diff file parts, each part has
 - 32 bits type field.
 - 32 bits length field.
 - length bytes of content.
